// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryTask should dispatch actions to multiple error 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "payload": Object {
      "message": "jobName workCategoryName is invalid job.(2021-04-01, 2021-04-02)
workCategoryName cannot be selected as the work category of jobName on the target day.(2021-04-03)",
      "options": Object {
        "messageType": "TRANSFER_RESULT_WITH_WARNING",
      },
      "variant": "error",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`SummaryTask update should dispatch actions to display error 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "payload": Object {
      "message": "permission denied",
      "options": undefined,
      "variant": "error",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`SummaryTask update should dispatch actions to display success toast 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "payload": Object {
      "message": "Successfully update.(2021-04-01)",
      "options": undefined,
      "variant": "success",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
  Object {
    "type": "/TIME-TRACKING-CHARGE-TRANSFER-PC/MODULES/UI/TIME_TRACKING_CHARGE/RESET",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`SummaryTask update should dispatch actions to show error about transfer period 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "End Date is set before the Start Date",
      "options": undefined,
      "variant": "error",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
]
`;
